--- a/CollegeWorth.ipynb
+++ b/CollegeWorth.ipynb
@@ -7,7 +7,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('CollegeTuitionData.csv', 'r') as file:\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
